Add icons.svg preload link

--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -904,5 +904,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link id="initial-styles" rel="stylesheet" type="text/css" href="/static/css/head.css?v=1686009733">
-<script src="/static/js/head.js?v=1686009731"></script>
+<link id="initial-styles" rel="stylesheet" href="/static/css/head.css?v=1686010165">
+<script src="/static/js/head.js?v=1686010164"></script>
+<link rel="preload" href="/static/img/icon/icons.svg?v=1686010165" as="image">
