Tweak asset loading

--- a/include/inlined-asset-links.html
+++ b/include/inlined-asset-links.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" type="text/css" href="/static/css/style.css?v=1686010728">
-<script src="/static/js/script.js?v=1686010728" defer></script>
+<link rel="stylesheet" href="/static/css/style.css?v=1686018363" media="print" onload="this.media=`all`">
+<script src="/static/js/script.js?v=1686018801" defer></script>
