--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -904,6 +904,8 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link id="initial-styles" rel="stylesheet" href="/static/css/head.css?v=1686010728">
-<script src="/static/js/head.js?v=1686010728"></script>
-<link rel="preload" href="/static/img/icon/icons.svg?v=1686010589" as="image">
+<link rel="stylesheet" href="/static/css/head.css?v=1686018363">
+<script src="/static/js/head.js?v=1686018362"></script>
+<link rel="preload" href="/static/css/style.css?v=1686018363" as="style">
+<link rel="preload" href="/static/js/script.js?v=1686018362" as="script">
+<link rel="preload" href="/static/img/icon/icons.svg?v=1686018362" as="image">
