Fixes and tweaks to reader mode styling

--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2416,18 +2416,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5332,14 +5332,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5472,7 +5472,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5898,14 +5898,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6059,8 +6059,8 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 9999;
     pointer-events: none;
 }
@@ -6778,7 +6778,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686078492#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686086541#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7284,7 +7284,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686078492#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686086541#circle-notch-solid');
 
     pointer-events: none;
 }
