--- a/css/default.css
+++ b/css/default.css
@@ -4996,8 +4996,8 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 9999;
     pointer-events: none;
 }
