--- a/css/reader-mode-initial.css
+++ b/css/reader-mode-initial.css
@@ -11,7 +11,6 @@ body.reader-mode-active #sidenote-column-left,
 body.reader-mode-active #sidenote-column-right,
 body.reader-mode-active #navigation,
 body.reader-mode-active #footer,
-body.reader-mode-active #footer-decoration-container,
 body.reader-mode-active .inflation-adjusted .subsup,
 body.reader-mode-active .footnote-ref,
 body.reader-mode-active .footnote-back {
@@ -22,23 +21,17 @@ body.reader-mode-active #sidebar a.logo {
 	border-color: transparent;
 }
 
-@media only screen and (max-width: 649px) {
-	body.reader-mode-active #TOC {
-		margin-top: 1em;
-	}
-}
-
 body.reader-mode-active #TOC ul li {
 	padding-left: 0.125em;
 }
 
-body.reader-mode-active #markdownBody .spawns-popup,
-body.reader-mode-active #markdownBody .spawns-popin {
+body.reader-mode-active .markdownBody .spawns-popup,
+body.reader-mode-active .markdownBody .spawns-popin {
 	margin: 0;
 	padding: 0;
 }
 
-body.reader-mode-active #markdownBody a .indicator-hook::before {
+body.reader-mode-active .markdownBody a .indicator-hook::before {
 	padding-left: 0.3em;
 	box-shadow:
 		-0.17em  0.05em 0 0 var(--link-underline-background-color),
@@ -61,7 +54,7 @@ body.reader-mode-active #markdownBody a .indicator-hook::before {
 		0 calc(100% - 0.1em);
 }
 
-body.reader-mode-active #markdownBody a .link-icon-hook {
+body.reader-mode-active .markdownBody a .link-icon-hook {
 	position: absolute;
 	box-shadow:
 		 0.17em  0.05em 0 0 var(--link-underline-background-color),
@@ -78,67 +71,75 @@ body.reader-mode-active #markdownBody a .link-icon-hook {
 	background-repeat: no-repeat;
 }
 
-body.reader-mode-active #markdownBody a.has-annotation .link-icon-hook {
+body.reader-mode-active .markdownBody a.has-annotation .link-icon-hook {
 	background-image: var(--link-underline-background-image);
 	background-size: 2px 1px;
 	background-repeat: repeat-x;
 }
 
-body.reader-mode-active #markdownBody a .indicator-hook,
-body.reader-mode-active #markdownBody a .link-icon-hook {
+body.reader-mode-active .markdownBody a .indicator-hook,
+body.reader-mode-active .markdownBody a .link-icon-hook {
 	visibility: hidden;
 }
 
-body.reader-mode-active #markdownBody a:hover {
+body.reader-mode-active .markdownBody a:hover {
 	position: relative;
 	z-index: 111;
 }
 
-body.reader-mode-active #markdownBody a:hover .indicator-hook,
-body.reader-mode-active #markdownBody a:hover .link-icon-hook {
+body.reader-mode-active .markdownBody a:hover .indicator-hook,
+body.reader-mode-active .markdownBody a:hover .link-icon-hook {
 	visibility: visible;
 }
 
-body.reader-mode-active.masked-links-hidden #markdownBody a .indicator-hook,
-body.reader-mode-active.masked-links-hidden #markdownBody a .link-icon-hook {
+body.reader-mode-active.masked-links-hidden .markdownBody a .indicator-hook,
+body.reader-mode-active.masked-links-hidden .markdownBody a .link-icon-hook {
 	display: none;
 }
 
-body.reader-mode-active.masked-links-hidden #markdownBody p a:not(.popup-open),
-body.reader-mode-active.masked-links-hidden #markdownBody p a:not(.popup-open):visited,
-body.reader-mode-active.masked-links-hidden #markdownBody p a:not(.popup-open):hover {
+body.reader-mode-active.masked-links-hidden .markdownBody a:not(.popup-open):not(.popin-open),
+body.reader-mode-active.masked-links-hidden .markdownBody a:not(.popup-open):not(.popin-open):visited,
+body.reader-mode-active.masked-links-hidden .markdownBody a:not(.popup-open):not(.popin-open):hover {
 	color: inherit;
 	background: none;
 	cursor: text;
 }
 
-body.reader-mode-active.masked-links-hidden #markdownBody a:link,
-body.reader-mode-active.masked-links-hidden #markdownBody a:link * {
+body.reader-mode-active.masked-links-hidden .markdownBody a:link,
+body.reader-mode-active.masked-links-hidden .markdownBody a:link * {
 	text-shadow: none;
 }
 
-body.reader-mode-active.masked-links-hidden #markdownBody a code {
+body.reader-mode-active.masked-links-hidden .markdownBody a code {
 	border-bottom-width: 1px;
 }
 
 /*  Citations.
  */
-body.reader-mode-active .cite-joiner {
+body.reader-mode-active .markdownBody .cite-joiner {
 	display: initial;
 }
-body.reader-mode-active .cite-date::before {
+body.reader-mode-active .markdownBody .cite-date::before {
 	content: " ";
 }
 
-body.reader-mode-active .cite-date {
+body.reader-mode-active .markdownBody .cite-date {
 	vertical-align: unset;
 	font-size: unset;
 	line-height: unset;
 	font-variant-numeric: unset;
 	margin-left: unset;
 }
-body.reader-mode-active .cite-author-plural::after {
+body.reader-mode-active .markdownBody .cite-author-plural::after {
 	content: " ";
+}
+
+/*	Misc.
+ */
+body.reader-mode-active .markdownBody p code {
+	--background-color: inherit;
+
+	border-color: transparent;
 }
 
 /*  Mobile layout adjustments.
@@ -146,11 +147,8 @@ body.reader-mode-active .cite-author-plural::after {
 @media only screen and (max-width: 649px) {
 	body.reader-mode-active #sidebar {
 		position: relative;
-		margin: 1em 0 0 0;
 	}
 	body.reader-mode-active #sidebar a.logo {
-		width: 100%;
-		justify-content: center;
 		margin: 0;
 		padding: 0;
 	}
@@ -158,7 +156,6 @@ body.reader-mode-active .cite-author-plural::after {
 		width: 1.5rem;
 		background-color: var(--GW-body-background-color);
 		padding: 0 10px 0 11px;
-		margin: auto;
 	}
 	body.reader-mode-active #sidebar a.logo::before {
 		content: "";
@@ -169,8 +166,5 @@ body.reader-mode-active .cite-author-plural::after {
 		left: 0;
 		top: 50%;
 		z-index: -1;
-	}
-	body.reader-mode-active header h1 {
-		margin: 0.625em 0 0.375em 0;
 	}
 }
